# dialogue-splitter

./: .gitignore  Dialogue Splitter.spec  Info.plist  Makefile  app.spec  combine-channels.sh  justfile  pyproject.toml  readme.md
src/: dialogue_splitter_gui.py
src/dialogue_splitter/: __init__.py  get_percentage.py  log_handler.py  progress_tracker.py  splitter.py  tqdm_interceptor.py  video.py
src/gui/: __init__.py  app.py
tests/: test_integration.py  test_progress.py  test_splitter.py
